--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 #immagine-i{
     width:auto;
-    height:200px;
+    height:150px;
     background-color: dodgerblue;
     background-image:url(../img/pattern.png);
     background-size:contain;
@@ -14,7 +14,7 @@
 #logo{
    width:auto;
    height: 60px;
-   margin-top: 100px;
+   margin-top:75px;
 }
 #table{
     padding-top:10px;
@@ -34,10 +34,25 @@ h1{
     font-size:60px;
 }
 .golden-decoration{
-    color:goldenrod;
+   text-decoration:dotted;
+   color: yellow;
 }
-.footpaper{
-    margin-left:5px;
+.footpaper-1{
+    background-image:url(../img/monitor.jpg);
+    color:white;
+    background-size:contain;
+    height:200px;
+    width:200px;
+    margin-bottom:5px;
+
+}
+.footpaper-2{
+    background-image:url(../img/graph.jpg);
+    color:white;
+    background-size:contain;
+    height:200px;
+    width:200px;
+    
 
 }
 h4{
@@ -45,3 +60,6 @@ h4{
     padding:5px;
 }
 
+a{
+    text-decoration:none;
+}
