--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+.container{
     margin:auto 10px;
 }
 
@@ -15,8 +15,7 @@
    margin-top:75px;
 }
 #table{
-    padding-top:10px;
-    padding-bottom:10px;
+    margin:10px;
 }
 thead{
     background-color: blue;
